<resources>
    <string name="app_name">AndroidApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Calculation Test</string>
    <string name="add_word">Add word</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="title_activity_launch_mode">LaunchModeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="str_request_url">刷新网页</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="request_users">请求所有用户</string>
    <string name="next_user">下一个用户</string>
    <string name="delete_user">删除当前用户</string>

    <string name="str_menu_exo">ExoPlayer</string>
    <string name="str_menu_ffmpeg">FFMpeg</string>
    <string name="str_menu_screen_recorder">录屏</string>
    <string name="str_open_floating_window">打开悬浮窗</string>
    <string name="str_close_floating_window">关闭悬浮窗</string>
    <string name="str_menu_floating_window">悬浮窗</string>
    <string name="str_menu_compose">Compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="str_menu_media_codec">Media Codec</string>
    <string name="str_menu_hide_api">Hidden Api</string>
    <string name="open_camera">打开摄像头</string>
    <string name="close_camera">关闭摄像头</string>
    <string name="start_record">开始录像</string>
    <string name="stop_record">结束录像</string>
</resources>